<!-- activity_main.xml -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paper_texture"
    tools:context=".MainActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/whaa_to_do_app"
        android:textColor="@color/black"
        android:textSize="42sp"
        android:textStyle="bold|italic" />

    <!-- First hint -->
    <TextView
        android:id="@+id/tvAddTaskHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/_1_write_and_press_add_task_button_to_add_new_task"
        android:textSize="12sp" />

    <!-- Second hint -->
    <TextView
        android:id="@+id/tvDeleteTaskHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAddTaskHint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/_2_long_press_to_delete_the_task"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/etNewTask"
        android:layout_below="@id/tvDeleteTaskHint"
        android:layout_margin="24dp"
        android:background="@drawable/rounded_corners"
        android:elevation="8dp"
        android:padding="16dp">

        <!-- ListView for tasks -->
        <ListView
            android:id="@+id/lvTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:dividerHeight="0dp" />

    </LinearLayout>

    <!-- New task input -->
    <EditText
        android:id="@+id/etNewTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corners"
        android:hint="@string/anything_else_to_do"
        android:inputType="text"
        android:padding="8dp" />

    <!-- Button to add -->
    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="addTask"
        android:text="@string/add_task" />

</RelativeLayout>
